Some fixes for Anya branch which added CORS filter, User data moved to DB, JWT tokens, Registration and Logout endpoint, Password hashing.